tests/syntax/bad/testfile-type_param-2.scala

class A { var x = new B[]() }
object Main { def main(args: Array[String]) { } }
